--- a/scss/service3-page.scss
+++ b/scss/service3-page.scss
@@ -45,6 +45,24 @@ $sp-second: 425px;  // スマホ
     margin: 0 auto;
     margin-bottom: 34px;
     margin-top: 82px;
+
+
+    @include tab{
+      width: 100%;
+      height: 50px;
+      line-height: 50px;
+      font-size: 22px;
+      padding-left: 20px;
+      background-size: 100% 100%;
+    }
+
+    @include sp{
+      font-size: 18px;
+      padding-left: 10px;
+    }
+
+
+
 }
 
 html{
@@ -449,6 +467,8 @@ body{
         color: #6B7483;
         font-weight: bold;
 
+
+
         .header_contact{
           text-align: center;
           padding-right: 24.4px;
@@ -465,11 +485,14 @@ body{
               margin-left: 12px;
               font-family: 'Oswald', sans-serif;
               font-weight: 500;
+             
               img{
-                width: 13px;
-              }
-            }
-          }
+                width: 19px;
+                height: 18px;
+                margin-right: 2px;
+              }/*img*/
+            }/*span*/
+          }/*area*/
 
         }
 
@@ -696,28 +719,53 @@ body{
   }/*content*/
 
 
-.contact_wrap{
+  .contact_wrap{
     margin-bottom: 94px;
     margin-top: 109px;
+
+    @include sp{
+      margin-bottom: 70px;
+      margin-top: 90px;
+    }
 
     .contact_title{
       font-size: 26px;
       margin-bottom: 36px;
       text-align: center;
+
+      @include tab{
+        font-size: 22px;
+      }/*tab*/
+
+      @include sp{
+        font-size: 20px;
+      }
+
+      @include sp-second(){
+        font-size: 18px;
+      }
+
     }
 
     .btn{
         width: 708px;
         margin: 0 auto;
         height: 82px;
+  
 
         @include tab{
-            width: 250px;
+          max-width: 700px;
+          width: 85%;
+          height: auto;
         }
 
         @include sp{
-            margin: 0 auto;
-            width: 99%;
+          width: 80%;
+          margin: 0 auto;
+        }
+
+        @include sp-second(){
+          width: 280px;
         }
 
         a{
@@ -733,11 +781,24 @@ body{
             line-height: 82px;
             height: 82px;
 
-            
-            @include sp{
-                padding: 20px 0px;
+            @include tab{
+              font-size: 22px;
+              height: 75px;
+              line-height: 75px;
             }
 
+            @include sp{
+              font-size: 20px;
+              height: 65px;
+              line-height: 65px;
+            }
+
+            @include sp-second(){
+              font-size: 14px;
+              height: 60px;
+              line-height:60px;
+            }
+         
         }/*a*/
     }/*btn*/
 
@@ -761,11 +822,22 @@ body{
         justify-content: center;
         margin-top: 13px;
 
+        @include sp{
+          display: block;
+          margin-right: 0px;
+          text-align: center;
+          padding-left: 0px;
+        }
+
         p{
             color: #F79E46;
             letter-spacing: 2.6px;
             font-weight: bold;
             font-size: 26px;
+
+            @include tab{
+              font-size: 20px;
+            }
 
           .number{
             margin-left: 12px;
@@ -775,10 +847,23 @@ body{
             align-items: center;
             font-size: 28px;
 
+
+            @include tab{
+              font-size: 22px;
+            }
+
             img{
               width: 18px;
               margin-left: 17.4px;
               margin-right: 4px;
+
+              @include tab{
+                margin-left: 8px;
+                margin-right: 4px;
+                width: 14px;
+                }
+
+
             }/*img*/
 
           }/*span*/
@@ -787,11 +872,30 @@ body{
 
       #shinjuku{
           margin-right: 18px;
-      }
+
+
+          @include tab{
+            margin-right: 12px;
+          }
+
+          @include sp{
+            margin-right: 0px;
+          }
+      }/*shinjuku*/
 
       #yokohama{
         margin-left: 18px;
-    }
+
+        @include tab{
+          margin-right: 12px;
+        }
+
+        @include sp{
+          margin: 0 auto;
+        }
+
+
+    }/*yokohama*/
 
 
 
@@ -812,11 +916,35 @@ body{
 
       @include pc{
         padding-right:20px;
-        padding-left: 20px;
+        padding-left: 0px;
       }
+
+      @include sp{
+        display: block;
+        padding-right:0px;
+        padding-left: 0px;
+        width: 300px;
+      }
+
+      @include sp{
+        padding-top: 40px;
+        padding-bottom: 60px;
+      }
+
+
 
       .footer_nav{
         ul{
+
+          @include tab{
+            margin-left: 15px;
+          }
+
+          @include sp{
+            margin-top: 10px;
+          }
+
+        
           .nav_top_title{
             font-weight: bold;
             margin-bottom: 10px;
@@ -839,6 +967,7 @@ body{
               font-size: 14px;
               margin-top: 14px;
             }
+
           }/*top_title*/
 
           li{
@@ -867,9 +996,7 @@ body{
 
         }
       }
-
     }/*wrap*/
   }/*footer*/
-
 }/*body*/
 }
