--- a/scss/front_page.css
+++ b/scss/front_page.css
@@ -583,6 +583,16 @@ html body header .header_wrap .header_nav ul {
   }
 }
 
+html body header .header_wrap .header_nav ul #contact-drawer {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  html body header .header_wrap .header_nav ul #contact-drawer {
+    display: block;
+  }
+}
+
 html body header .header_wrap .header_nav ul .g-nav {
   border-right: 1px solid #222222;
   color: #222222;
@@ -623,6 +633,12 @@ html body header .header_wrap .header_nav ul .g-nav a {
   html body header .header_wrap .header_nav ul .g-nav a {
     font-size: 14px;
   }
+}
+
+html body header .header_wrap .header_nav ul .g-nav a:hover {
+  opacity: 0.8;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 html body header .header_wrap .header_nav ul li:last-child {
